--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -47,7 +47,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
+    --background-start-rgb: 50, 50, 50;
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
@@ -77,19 +77,26 @@
   }
 }
 
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
-  padding: 0;
+}
+
+* {
   margin: 0;
+  padding: 0;
 }
 
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
 body {
+  position: relative;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -102,6 +109,16 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+img,
+picture,
+svg,
+video {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+  object-position: center;
 }
 
 @media (prefers-color-scheme: dark) {
